# classifinder-mcp

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/classifinder_mcp/: __init__.py  audit.py  server.py
tests/: test_audit.py  test_server.py
