[project]
name = "classifinder-mcp"
version = "0.1.2rc1"
description = "MCP server for ClassiFinder — secret scanning tools for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Thomas Paras", email = "thomasparas87@gmail.com"}]
keywords = ["mcp", "model-context-protocol", "secrets", "scanner", "security", "ai-agent", "classifinder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "classifinder>=0.1.3",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://classifinder.ai"
Repository = "https://github.com/ClassiFinder/classifinder-mcp"
Issues = "https://github.com/ClassiFinder/classifinder-mcp/issues"

[project.scripts]
classifinder-mcp = "classifinder_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/classifinder_mcp"]

[tool.hatch.build.targets.sdist]
# Default is "everything in git". Trim the fat that PyPI users don't need.
exclude = [
    ".github",
    "uv.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "TCH",  # type-checking imports
]

[tool.ruff.lint.isort]
known-first-party = ["classifinder_mcp"]
